# rust-postgres-protocol

./: Cargo.toml  README.md
doc/v0.1.0/: search-index.js
doc/v0.1.0/implementors/fallible_iterator/: trait.FallibleIterator.js
doc/v0.1.0/postgres_protocol/: enum.IsNull.html  index.html  type.Oid.html
doc/v0.1.0/postgres_protocol/authentication/: fn.md5_hash.html  index.html  sidebar-items.js
doc/v0.1.0/postgres_protocol/message/: index.html
doc/v0.1.0/postgres_protocol/types/: enum.Range.html  enum.RangeBound.html  fn.array_from_sql.html  fn.array_to_sql.html  fn.bool_from_sql.html  fn.bool_to_sql.html  fn.bytea_from_sql.html  fn.bytea_to_sql.html  fn.char_from_sql.html  fn.char_to_sql.html  fn.date_from_sql.html  fn.date_to_sql.html  fn.empty_range_to_sql.html  fn.float4_from_sql.html  fn.float4_to_sql.html  fn.float8_from_sql.html  fn.float8_to_sql.html  fn.hstore_from_sql.html  fn.hstore_to_sql.html  fn.int2_from_sql.html  fn.int2_to_sql.html  fn.int4_from_sql.html  fn.int4_to_sql.html  fn.int8_from_sql.html  fn.int8_to_sql.html  fn.macaddr_from_sql.html  fn.macaddr_to_sql.html  fn.oid_from_sql.html  fn.oid_to_sql.html  fn.range_from_sql.html  fn.range_to_sql.html  fn.text_from_sql.html  fn.text_to_sql.html  fn.time_from_sql.html  fn.time_to_sql.html  fn.timestamp_from_sql.html  fn.timestamp_to_sql.html  (+12 more)
doc/v0.1.1/: search-index.js
doc/v0.1.1/postgres_protocol/: enum.IsNull.html  index.html  type.Oid.html
src/: authentication.rs  lib.rs  types.rs
src/message/: backend.rs  frontend.rs  mod.rs
src/message/backend/: borrowed.rs  mod.rs
(+162 files in other folders)
