[package]
name = "postgres-protocol"
version = "0.2.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
description = "Low level Postgres protocol APIs"
license = "MIT/Apache-2.0"
repository = "https://github.com/sfackler/rust-postgres-protocol"
documentation = "https://docs.rs/postgres-protocol/0.2.0/postgres_protocol"
readme = "README.md"

[dependencies]
byteorder = "1.0"
fallible-iterator = "0.1"
hex = "0.2"
md5 = "0.2"
memchr = "1.0"
